k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  namespace: wanderlust
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: atkaridarshan04/wanderlust-backend:v1
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: wanderlust
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      nodePort: 30001
