k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  namespace: wanderlust
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: atkaridarshan04/wanderlust-frontend:v2
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: wanderlust
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
      nodePort: 30000
