k8s/mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-dep
  namespace: wanderlust
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-vol
              mountPath: /data/wanderlust
      volumes:
        - name: mongo-vol
          persistentVolumeClaim:
            claimName: mongo-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: wanderlust
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
