k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dep
  namespace: wanderlust
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: mongo-vol
              mountPath: /var/lib/redis/dump.rdb
      volumes:
        - name: mongo-vol
          persistentVolumeClaim:
            claimName:   mongo-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: wanderlust
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
